Added K&R to .bib entries.

--- a/COSC-6365-MichaelYantosca-FinalProjectReport.bib
+++ b/COSC-6365-MichaelYantosca-FinalProjectReport.bib
@@ -41,3 +41,13 @@
   urldate = 	 {2017-11-13}
 }
 
+@Book{KnR,
+  author = 	 {Kernighan, Brian W. and Ritchie, Dennis M.},
+  title = 	 {The C Programming Language},
+  year =         {1988},
+  edition = 	 {2},
+  series = 	 {Prentice Hall Software Series},
+  publisher =    {Prentice Hall PTR},
+  location =     {Englewood Cliffs, New Jersey}
+}
+
