--- a/COSC-6365-MichaelYantosca-FinalProjectReport.tex
+++ b/COSC-6365-MichaelYantosca-FinalProjectReport.tex
@@ -54,6 +54,35 @@
   \end{subsection}
 \end{section}
 
+\begin{section}{Validation}
+  \begin{paragraph}{}
+    Before commencing on the actual implementation of the matrix multiplication programs, it was determined that the design of
+    the validation trials would take first priority so as to catch errors in implementation earlier rather than later.
+    The validation mechanism itself needed to operate under several exacting constraints. It has been already mentioned
+    that the product matrix $C$ in validation mode would need to house a unique value in each cell once calculations had finished.
+    This was to ensure that every dot product of each row in $A$ and each column in $B$ did not suffer corruption from any other
+    dot products or other implementation errors by providing a quick reference that could be used as a sanity check.
+  \end{paragraph}
+  \begin{paragraph}{}
+    Alacrity in the validation implementation was key. If the validation required additional extended calculations to replicate the results serially,
+    the time to find and correct errors could become prohibitively slow, especially as the matrix dimensions $M$ and $N$ increased.
+    Ideally, the validation would be a constant time function $f$ based on the row and column index of the cell in question, i.e.,
+    $C_{i,j} = f(i,j)$.
+  \end{paragraph}
+  \begin{paragraph}{}
+    The under-the-hood 1D row-major ordering and indexing of 2D matrices in the C programming language provided the requisite inspiration.
+    The cell of every 2D matrix in C is accessed implicitly by the following formula: $i \times N +j$, where $i$ is the row index,
+    $j$ is the column index, and $N$ is the number of columns\autocite[][113]{KnR}. Initial attempts sough to find some function $f(i,j) = \displaystyle\sum_{k=1}^{N} A_{i,k} \cdot B_{k,j}$
+    such that the matrix $A$ independently provided the $i$ component while the matrix $B$ independently provided the $j$ component.
+  \end{paragraph}
+  \begin{paragraph}{}
+    After wrestling with the algebra for some time, a simple solution was devised. One merely had to populate each cell of the matrix $A$
+    with its row index $i$, each cell of the matrix $B$ with the constant $1$, and each cell of the matrix $C$ with its column index $j$
+    instead of the customary constant $0$. In this way, the equation $C = A \times B$ became $C = A \times B + C_{0}$ where
+    performance trials would start with $C_{0} = \textbf{0}$ and validation trials would start with $C_{0} = \textbf{J}$.
+  \end{paragraph}
+ \end{section}
+
 \printbibliography
 
 \end{document}
