Expand section on validation to include issues encountered.

--- a/COSC-6365-MichaelYantosca-FinalProjectReport.bib
+++ b/COSC-6365-MichaelYantosca-FinalProjectReport.bib
@@ -51,3 +51,11 @@
   location =     {Englewood Cliffs, New Jersey}
 }
 
+@Online{SPIntLimit,
+  title =        {Single-Precision Floating Point Format},
+  subtitle =     {Precision limits on integer values},
+  date =         {2017-11-28},
+  url =          {https://en.wikipedia.org/wiki/Single-precision_floating-point_format#Precision_limits_on_integer_values},
+  organization = {The Wikimedia Project},
+  urldate =      {2017-11-30}
+}
