Added references for MKL implementation.

--- a/COSC-6365-MichaelYantosca-FinalProjectReport.bib
+++ b/COSC-6365-MichaelYantosca-FinalProjectReport.bib
@@ -59,3 +59,17 @@
   organization = {The Wikimedia Project},
   urldate =      {2017-11-30}
 }
+
+@Online{MKLcblas_sgemm,
+  title = 	 {cblas_?gemm},
+  url = 	 {https://software.intel.com/en-us/mkl-developer-reference-c-cblas-gemm},
+  organization = {Intel Corporation},
+  urldate = 	 {2017-12-02}
+}
+
+@Online{MKLcblas_sgemmx,
+  title = 	 {cblas_sgemmx.c},
+  url = 	 {https://software.intel.com/en-us/mkl-developer-reference-c-cblas_sgemmx},
+  organization = {Intel Corporation},
+  urldate = 	 {2017-12-02}
+}
