Added .bib reference for alltt docs.

--- a/COSC-6365-MichaelYantosca-FinalProjectReport.bib
+++ b/COSC-6365-MichaelYantosca-FinalProjectReport.bib
@@ -73,3 +73,11 @@
   organization = {Intel Corporation},
   urldate = 	 {2017-12-02}
 }
+
+@Online{alltt,
+  author = 	 {Braams, Johannes},
+  title = 	 {The alltt environment},
+  date = 	 {1997-06-16},
+  url = 	 {http://mirrors.ctan.org/macros/latex/base/alltt.pdf},
+  urldate = 	 {2017-12-02}
+}
