--- a/COSC-6365-MichaelYantosca-FinalProjectReport.tex
+++ b/COSC-6365-MichaelYantosca-FinalProjectReport.tex
@@ -122,7 +122,7 @@
       programs provided with the CUDA toolkit.
     \end{paragraph}
     \begin{paragraph}{}
-      To run the modified program, one would type the following command:
+      To run the scale-up harness, one would type the following command:
       \begin{subparagraph}{}
         \begin{alltt}
           ./matrixMulCUBLAS m=\(m\) q=\(q\) n=\(n\) validation=[0|1]
