Added OpenACC references since OpenMP support with offloading on bridges is non-existent.

--- a/COSC-6365-MichaelYantosca-FinalProjectReport.bib
+++ b/COSC-6365-MichaelYantosca-FinalProjectReport.bib
@@ -81,3 +81,38 @@
   url = 	 {http://mirrors.ctan.org/macros/latex/base/alltt.pdf},
   urldate = 	 {2017-12-02}
 }
+
+
+@Online{OpenACCStd,
+  title = 	 {The OpenACC(R) Application Programming Interface},
+  date = 	 {2017-11-06},
+  url = 	 {https://www.openacc.org/sites/default/files/inline-files/OpenACC.2.6.final.pdf},
+  version = 	 {2.6},
+  organization = {OpenACC-Standard.org},
+  urldate = 	 {2017-12-04}
+}
+
+
+@Online{gccOpenACC,
+  ALTauthor = 	 {},
+  ALTeditor = 	 {},
+  title = 	 {},
+  ALTyear = 	 {},
+  ALTdate = 	 {},
+  url = 	 {https://gcc.gnu.org/wiki/OpenACC},
+  OPTkey = 	 {},
+  OPTsubtitle =  {},
+  OPTtitleaddon = {},
+  OPTlanguage =  {},
+  OPTversion = 	 {},
+  OPTnote = 	 {},
+  OPTorganization = {},
+  OPTdate = 	 {},
+  OPTmonth = 	 {},
+  OPTyear = 	 {},
+  OPTaddendum =  {},
+  OPTpubstate =  {},
+  OPTurldate = 	 {},
+  OPTannote = 	 {}
+}
+
