Added BRIDGES GPU user guide to refs.

--- a/COSC-6365-MichaelYantosca-FinalProjectReport.bib
+++ b/COSC-6365-MichaelYantosca-FinalProjectReport.bib
@@ -116,3 +116,12 @@
   OPTannote = 	 {}
 }
 
+@Online{BridgesGPUGuide,
+  title = 	 {Bridges User Guide},
+  subtitle =     {Using Bridges' GPU nodes}
+  date = 	 {2017-10-31},
+  url = 	 {https://www.psc.edu/bridges/user-guide/gpu-use},
+  organization = {Pittsburgh Supercomputing Center},
+  urldate = 	 {2017-12-04},
+}
+
