Fixed some .bib entries.

--- a/COSC-6365-MichaelYantosca-FinalProjectReport.bib
+++ b/COSC-6365-MichaelYantosca-FinalProjectReport.bib
@@ -94,34 +94,20 @@
 
 
 @Online{gccOpenACC,
-  ALTauthor = 	 {},
-  ALTeditor = 	 {},
-  title = 	 {},
-  ALTyear = 	 {},
-  ALTdate = 	 {},
+  title = 	 {GCC Wiki},
+  subtitle =     {OpenACC},
+  date = 	 {2017-07-27},
   url = 	 {https://gcc.gnu.org/wiki/OpenACC},
-  OPTkey = 	 {},
-  OPTsubtitle =  {},
-  OPTtitleaddon = {},
-  OPTlanguage =  {},
-  OPTversion = 	 {},
-  OPTnote = 	 {},
-  OPTorganization = {},
-  OPTdate = 	 {},
-  OPTmonth = 	 {},
-  OPTyear = 	 {},
-  OPTaddendum =  {},
-  OPTpubstate =  {},
-  OPTurldate = 	 {},
-  OPTannote = 	 {}
+  organization = {Free Software Foundation, Inc.},
+  urldate = 	 {2017-12-04}
 }
 
 @Online{BridgesGPUGuide,
   title = 	 {Bridges User Guide},
-  subtitle =     {Using Bridges' GPU nodes}
+  subtitle =     {Using Bridges' GPU nodes},
   date = 	 {2017-10-31},
   url = 	 {https://www.psc.edu/bridges/user-guide/gpu-use},
   organization = {Pittsburgh Supercomputing Center},
-  urldate = 	 {2017-12-04},
+  urldate = 	 {2017-12-04}
 }
 
