Added some references on OpenACC and parallelization.

--- a/COSC-6365-MichaelYantosca-FinalProjectReport.bib
+++ b/COSC-6365-MichaelYantosca-FinalProjectReport.bib
@@ -111,3 +111,21 @@
   urldate = 	 {2017-12-04}
 }
 
+
+@Online{NoACCKernels,
+  author = 	 {Colgrove, Mat},
+  title = 	 {OpenACC parallel kernels not getting generated},
+  date = 	 {2016-01-28},
+  url = 	 {https://stackoverflow.com/questions/35035427/openacc-parallel-kernels-not-getting-generated},
+  urldate = 	 {2017-12-06}
+}
+
+@Online{MMOptimizeOpenACC,
+  author = 	 {Child, Tim},
+  editor = 	 {Harris, Mark},
+  title = 	 {How to optimize matrix multiplication using OpenACC?},
+  date = 	 {2012-09-14},
+  url = 	 {https://stackoverflow.com/questions/11791843/how-to-optimize-matrix-multiplication-using-openacc},
+  urldate = 	 {2017-12-06}
+}
+
