Added references for Beamer.

--- a/COSC-6365-MichaelYantosca-FinalProjectReport.bib
+++ b/COSC-6365-MichaelYantosca-FinalProjectReport.bib
@@ -129,3 +129,27 @@
   urldate = 	 {2017-12-06}
 }
 
+@Online{IntroToBeamer,
+  author = 	 {Soualem, Nadir},
+  title = 	 {How to make a presentation with Latex - Introduction to Beamer},
+  date = 	 {2007-07-14},
+  url = 	 {https://math-linux.com/latex-26/article/how-to-make-a-presentation-with-latex-introduction-to-beamer},
+  urldate = 	 {2017-12-07}
+}
+
+@Online{WikiBeamer,
+  title = 	 {Beamer (LaTeX)},
+  date = 	 {2017-11-23},
+  url = 	 {https://en.wikipedia.org/wiki/Beamer_(LaTeX)},
+  organization = {Wikimedia Foundation, Inc.},
+  urldate = 	 {2017-12-07}
+}
+
+@Online{BeamerSplitBiblio,
+  author = 	 {Tibbits, M.},
+  title = 	 {How can I split a beamer bibliography across two slides?},
+  date = 	 {2011-06-14},
+  url = 	 {https://tex.stackexchange.com/questions/20660/how-can-i-split-a-beamer-bibliography-across-two-slides},
+  urldate = 	 {2017-12-07}
+}
+
