Added detail about refactoring process for scale-up variant.

--- a/COSC-6365-MichaelYantosca-FinalProjectReport.bib
+++ b/COSC-6365-MichaelYantosca-FinalProjectReport.bib
@@ -153,3 +153,11 @@
   urldate = 	 {2017-12-07}
 }
 
+@Online{WolfePGI,
+  author = 	 {Wolfe, Michael},
+  title = 	 {OpenACC 2.0 and the PGI Accelerator Compiler},
+  date = 	 {2013-03-20},
+  url = 	 {http://on-demand.gputechconf.com/gtc/2013/presentations/S3447-OpenACC-2%20-PGI-Accelerator-Compilers.pdf},
+  urldate = 	 {2017-12-09},
+}
+
