Added .bib reference for sorting out how to have one legend cover an entire group plot.

--- a/COSC-6365-MichaelYantosca-FinalProjectReport.bib
+++ b/COSC-6365-MichaelYantosca-FinalProjectReport.bib
@@ -161,3 +161,11 @@
   urldate = 	 {2017-12-09},
 }
 
+@Online{GroupLegend,
+  ALTauthor = 	 {Kormylo, John},
+  title = 	 {Understanding How to Have One Legend for a Group Plot},
+  date = 	 {2016-06-22},
+  url = 	 {https://tex.stackexchange.com/questions/315987/understanding-how-to-have-one-legend-for-a-group-plot},
+  urldate = 	 {2017-12-12}
+}
+
