Adjust header output for matrixMulCUBLAS and mkl_cblas_sgemm to be more correct.

--- a/COSC-6365-MichaelYantosca-FinalProjectReport.tex
+++ b/COSC-6365-MichaelYantosca-FinalProjectReport.tex
@@ -150,10 +150,10 @@
       \item{$m$, the row dimension of $A$ and $C$}
       \item{$q$, the column dimension of $A$ and the row dimension of $B$}
       \item{$n$, the column dimension of $B$ and $C$}
-      \item{$r$, the achieved rate (gigaflops)}
+      \item{$r$, the achieved rate (gigaflops/sec)}
       \item{$s$, the number of iterations}
-      \item{$t_{iter}$, the average time spent per iteration (ms)}
-      \item{$r_{iter}$, the achieved rate per iteration (flops)}
+      \item{$f$, the number of flops per iteration (flops)}
+      \item{$t_{mult}$, the average time spent per iteration on multiplication (ms)}
       \item{$t_{comm}$, the time spent in host-to-device or device-to-host transfers (ms)}
       \end{enumerate}
     \end{paragraph}
@@ -193,10 +193,10 @@
       \item{$m$, the row dimension of $A$ and $C$}
       \item{$q$, the column dimension of $A$ and the row dimension of $B$}
       \item{$n$, the column dimension of $B$ and $C$}
-      \item{$r$, the achieved rate (gigaflops)}
+      \item{$r$, the achieved rate (gigaflops/sec)}
       \item{$s$, the number of iterations}
-      \item{$t_{iter}$, the average time spent per iteration (ms)}
-      \item{$r_{iter}$, the achieved rate per iteration (flops)}
+      \item{$f$, the number of flops per iteration (flops)}
+      \item{$t_{mult}$, the average time spent per iteration on multiplication (ms)}
       \end{enumerate}
     \end{paragraph}
   \end{subsection}
